hphp/test/zend/good/ext/xsl/tests/bug53965.php.skipif
<?php
if (!extension_loaded('xsl')) die("skip Extension XSL is required\n");
?>