hphp/test/zend/bad/ext/standard/tests/network/bug64330.php.skipif
<?php
if (!in_array("unix", stream_get_transports())) die("SKIP unix domain sockets unavailable");
if (!stristr(PHP_OS, "Linux")) die('skip abstract namespace is a Linux-only feature');
?>